tests/tooling/fixtures/native/recovery/negative/negative_misplaced_qualifier_statement_trailing_extern.objc3
// Negative fixture: declaration qualifiers are invalid in statement position.
// Expected diagnostic code(s): O3P100.
module NegativeMisplacedQualifierStatementTrailingExtern;

fn main() -> i32 {
  let lhs = 1;
  extern let rhs = 2;
  return lhs;
}